Fetched swiggy API data and used optional chaining

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     
     <div id="root">
-        <p>Not rendered</p>
+        <h1>Not rendered</h1>
     </div>
     
     <script type="module" src="./src/app.js"></script>   
